update project
- Se agregó más información al swagger
- Corrección del ItemFactory en datos json
- Modificación del ExceptionHandler para retornar en json los errores 404
