# app/Http/Controllers/QuestionController.php
@@ -35,7 +35,78 @@ class QuestionController extends Controller
         return Item::question()->get();
     }
 
-    
+    /**
+     * @OA\Post(
+     *      path="/api/admin/questions",
+     *      operationId="save_admin_question",
+     *      tags={"Admin Questions"},
+     *      summary="Alta de una pregunta",
+     *      security={ {"passport": {}}, },
+     *      description="Guardar una pregunta",
+     *      @OA\Parameter(
+     *          name="title",
+     *          in="query",
+     *          required=true,
+     *          @OA\Schema(
+     *            type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="description",
+     *          in="query",
+     *          required=false,
+     *          @OA\Schema(
+     *            type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="value",
+     *          in="query",
+     *          required=false,
+     *          description="Puntos al responder correctamente",
+     *          @OA\Schema(
+     *            type="int"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="lesson_id",
+     *          in="query",
+     *          required=true,
+     *          @OA\Schema(
+     *            type="integer"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="data",
+     *          in="query",
+     *          required=true,
+     *          description="Json con las opciones de la pregunta (type: multiple,boolean, answer: clave o valor)",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(property="type", type="string", enum={"multiple", "boolean"}),
+     *              @OA\Property(property="answer_type", type="string", enum={"single", "multiple", "all"}),
+     *              @OA\Property(property="answer", type="string", example=0),
+     *              @OA\Property(property="options", type="string", example={"opcion1","opcion2","opcion3"}),
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *         name="type",
+     *         in="query",
+     *         required=true,
+     *         @OA\Schema(
+     *              type="string",
+     *              enum={"question", "supplement"}
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\MediaType(
+     *           mediaType="application/json",
+     *          )
+     *      ),
+     *  )
+    */
     /**
      * Store a newly created resource in storage.
      *
@@ -44,7 +115,6 @@ class QuestionController extends Controller
      */
     public function store(QuestionRequest $request)
     {
-        dd($request->all());
         Item::create($request->validated() + ['type'=>'question']);
 
         return response()->json([
@@ -62,7 +132,7 @@ class QuestionController extends Controller
      *      description="Regresa un objeto con detalles de una pregunta",
      *      @OA\Parameter(
      *          name="id",
-     *          description="ID",
+     *          description="question",
      *          in="path",
      *          required=true,
      *          @OA\Schema(
@@ -89,6 +159,69 @@ class QuestionController extends Controller
         return Item::findOrFail($id);
     }
 
+    /**
+     * @OA\Put(
+     *      path="/api/admin/questions/{id}",
+     *      operationId="update_admin_question",
+     *      tags={"Admin Questions"},
+     *      summary="Actualizar una pregunta",
+     *      security={ {"passport": {}}, },
+     *      description="Actualizar una pregunta",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="question",
+     *          in="path",
+     *          required=true,
+     *          @OA\Schema(
+     *            type="integer"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="title",
+     *          in="query",
+     *          required=true,
+     *          @OA\Schema(
+     *            type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="description",
+     *          in="query",
+     *          required=false,
+     *          @OA\Schema(
+     *            type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="value",
+     *          in="query",
+     *          required=false,
+     *          description="Puntos al responder correctamente",
+     *          @OA\Schema(
+     *            type="int"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="data",
+     *          in="query",
+     *          required=true,
+     *          description="Json con las opciones de la pregunta (type: multiple,boolean, answer: clave o valor)",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(property="type", type="string", enum={"boolean", "multiple"}),
+     *              @OA\Property(property="answer_type", type="string", enum={"single", "multiple", "all"}),
+     *              @OA\Property(property="answer", type="string", example=false)
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\MediaType(
+     *           mediaType="application/json",
+     *          )
+     *      ),
+     *  )
+    */
     /**
      * Update the specified resource in storage.
      *
